@@ -230,7 +230,7 @@ void gap_set_time (GAPPlayer *gp, long time)
 		gst_element_set_state (gp->_priv->pipeline, GST_STATE_PLAYING);
 }
 
-void gap_get_metadata (GAPPlayer *gp, char **artist, char **title)
+void gap_get_metadata (GAPPlayer *gp, char **artist, char **title, long *duration)
 {
 	GAPMetaData *gapmd;
 
@@ -238,6 +238,7 @@ void gap_get_metadata (GAPPlayer *gp, char **artist, char **title)
 	gap_metadata_load (gapmd, gp->_priv->vfsuri);
 	*artist = g_strdup (gapmd->artist);
 	*title = g_strdup (gapmd->title);
+	*duration = gapmd->duration;
 	g_free (gapmd);
 }
 
