@@ -1,5 +1,10 @@
 2004-03-31  Mason Kidd  <mrkidd@mrkidd.com>
 
+	* src/playlist.c: Fix column widths
+	* src/gui-callbacks.c, src/GAPPlayer.c,.h: Pass duration onto playlist
+	
+2004-03-31  Mason Kidd  <mrkidd@mrkidd.com>
+
 	* src/gui-callbacks.c, src/GAPPlayer.c: Use the metadata in the UI
 
 2004-03-31  Mason Kidd  <mrkidd@mrkidd.com>
